# vuln-intel-agent

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  run-manifest.json  run-summary.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: auto-merge-daily.yml  ci.yml  collect-advisories.yml
config/: products.yaml  sources.yaml
docs/: codebase.md  collection-artifacts.md  development-record.md
quarantine/aiohttp_github/: latest.json
quarantine/alertmanager_github/: latest.json
quarantine/angular_github/: latest.json
quarantine/argo_cd_github/: latest.json
quarantine/caddy_github/: latest.json
quarantine/containerd_github/: latest.json
quarantine/cryptography_github/: latest.json
quarantine/deno_github/: latest.json
quarantine/directus_github/: latest.json
quarantine/docker_compose_github/: latest.json
quarantine/echo_github/: latest.json
quarantine/electron_github/: latest.json
schemas/: advisory.schema.json  products.schema.json  sources.schema.json
tests/: conftest.py  test_broadcom_collector.py  test_browser_collector.py  test_collectors.py  test_config.py  test_csaf_collector.py  test_exploitation.py  test_feed_collector.py  test_git_artifacts.py  test_identity.py  test_models.py  test_nvd_collector.py  test_osv.py  test_osv_global_collector.py  test_parsers.py  test_pipeline.py  test_priority.py  test_report.py  test_risk.py  test_storage.py  test_summarizer.py  test_ubiquiti_collector.py  test_validation.py  test_vulndb.py  test_web_collector.py
vulndb/: index.csv  registry.json
(+84818 files in other folders)
