[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnwatch"
version = "0.1.0"
description = "Vendor-first vulnerability advisory collection and normalization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "cvss>=3.0",
    "feedparser>=6.0.11",
    "httpx>=0.27",
    "lxml>=5.3",
    "pydantic>=2.10",
    "python-dateutil>=2.9",
    "ruamel-yaml>=0.18",
    "tenacity>=9.0",
    "typer>=0.15",
]

[project.optional-dependencies]
ai = ["openai>=1.58"]
browser = ["playwright>=1.49"]
pdf = ["pypdf>=5.1"]
dev = [
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ruff>=0.9",
]

[project.scripts]
vulnwatch = "vulnwatch.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["vulnwatch"]

[[tool.mypy.overrides]]
module = ["feedparser", "dateutil.*", "playwright.*", "pypdf", "cvss", "cvss.*"]
ignore_missing_imports = true
